syntax = "proto3";
package cloudbees;
option go_package="./proto;cloudbeespb";

import "user.proto";

message Seat {
  int32 seat_no = 1;
  string section = 2;
}

message AllocatedSeat {
  Seat seat = 1;
  User user = 2;
}

message ListSeatsRequest {
  string section = 1;
}

message ListSeatsResponse {
  repeated AllocatedSeat allocated_seat = 1;
}

message ModifySeatRequest {
  int32 ticket_id = 1;
  optional string section = 3;
}

message AllocationRequest {
  int32 ticket_id = 1;
  optional string section = 2;
}

service Seating {
  rpc List(ListSeatsRequest) returns (ListSeatsResponse){}
  rpc Modify(ModifySeatRequest) returns (AllocatedSeat){}
  rpc Allocate(AllocationRequest) returns(AllocatedSeat){}
}
