syntax = "proto3";
package cloudbees;
option go_package="./proto;cloudbeespb";

message User {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
}

service UserService {
  rpc DeleteUser(User) returns (User){}
}
